--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 node_modules/
 .expo/
-!production/
-production/*
-!production/releases/
-production/releases/*
-!production/releases/universal.apk
-!production/releases/bodypace-prod-3-assets/
+*.ignore/
