--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "~0.18.7",
-    "yup": "^0.32.11",
-    "expo-updates": "~0.15.6"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
